fix: Table overflow

--- a/src/components/html-table/html-table.mat.styl
+++ b/src/components/html-table/html-table.mat.styl
@@ -12,7 +12,6 @@ table.q-table
       border-left-width 0
 
     margin 0
-    overflow visible
     padding .5rem .7rem
 
   &.compact
